<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Menu1">

    <TextView
        android:id="@+id/Lbl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lbl4" />

    <EditText
        android:id="@+id/Edttxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Edttxt3" />

    <Button
        android:id="@+id/Btn6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Tampil_Tentukan"
        android:text="@string/Btn6" />

    <TextView
        android:id="@+id/Lbl5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn5" />
</LinearLayout>